--- a/the-meals-app/package.json
+++ b/the-meals-app/package.json
@@ -8,9 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/open-sans": "^0.1.0",
     "@react-native-community/masked-view": "0.1.6",
+    "@use-expo/font": "^2.0.0",
     "expo": "^37.0.0",
-    "expo-font": "^8.2.1",
+    "expo-font": "~8.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
