--- a/the-meals-app/package.json
+++ b/the-meals-app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.1.0",
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.6",
     "@use-expo/font": "^2.0.0",
     "expo": "^37.0.0",
@@ -22,6 +23,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.3.9",
+    "react-navigation-header-buttons": "^4.0.2",
     "react-navigation-stack": "^2.7.0",
     "react-navigator": "0.0.0-0"
   },
