--- a/the-meals-app/package.json
+++ b/the-meals-app/package.json
@@ -29,7 +29,9 @@
     "react-navigation-material-bottom-tabs": "^2.3.0",
     "react-navigation-stack": "^2.7.0",
     "react-navigation-tabs": "^2.9.0",
-    "react-navigator": "0.0.0-0"
+    "react-navigator": "0.0.0-0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.1.0",
