--- a/shop-app/package.json
+++ b/shop-app/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "^38.0.4",
     "expo-font": "^8.2.1",
@@ -28,7 +29,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "^8.1.0"
+    "babel-preset-expo": "^8.1.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
