--- a/shop-app/package.json
+++ b/shop-app/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "expo": "^38.0.4",
     "expo-font": "^8.2.1",
+    "expo-linear-gradient": "^8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
     "react": "^16.11.0",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "^8.1.0",
+    "react-native-dotenv": "^0.2.0",
     "redux-devtools-extension": "^2.13.8"
   },
   "private": true
