--- a/great-places-app/package.json
+++ b/great-places-app/package.json
@@ -31,11 +31,13 @@
     "expo-image-picker": "~8.3.0",
     "expo-permissions": "~9.0.1",
     "expo-file-system": "~9.0.1",
-    "expo-sqlite": "~8.2.1"
+    "expo-sqlite": "~8.2.1",
+    "expo-location": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "^8.1.0"
+    "babel-preset-expo": "^8.1.0",
+    "react-native-dotenv": "^0.2.0"
   },
   "private": true
 }
