--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ rn-first-app/.expo/packager-info.json
 great-places-app/app.json
 great-places-app/app.json
 great-places-app/app.json
+great-places-app/app.json
