--- a/shop-app/app.json
+++ b/shop-app/app.json
@@ -3,12 +3,13 @@
     "name": "shop-app",
     "slug": "shop-app",
     "version": "1.0.0",
+    "privacy": "unlisted",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/shopicon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#1ba681"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -18,6 +19,12 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/shopicontrans.png",
+        "backgroundColor": "#1ba681"
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
